--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "on-change": "^5.0.1",
+    "yup": "^1.4.0"
   }
 }
