--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "i18next": "^23.16.5",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
   }
