--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "i18next": "^23.16.5",
+    "lodash": "^4.17.21",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
   }
