--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-  "plugins": ["@babel/syntax-dynamic-import"],
+  "plugins": [
+    "@babel/syntax-dynamic-import",
+    "@babel/plugin-proposal-throw-expressions"],
   "presets": [
     [
       "@babel/preset-env",
